brat/test/golden/error/unmatched_bracket.brat.golden
Error in test/golden/error/unmatched_bracket.brat@1:17
f(n, Vec([], n) -> Vec([], n) -- First bracket never closed
                ^^

  Parse error unexpected -> 
expecting (...) or )


